# ortac

./: README.md  dune-project  ortac-core.opam  ortac-dune.opam  ortac-examples.opam  ortac-monolith.opam  ortac-qcheck-stm.opam  ortac-runtime-monolith.opam  ortac-runtime-qcheck-stm.opam  ortac-runtime.opam  ortac-wrapper.opam  ortac.opam
.github/workflows/: gh-pages.yml
examples/: README.md  dune  varray.awk  varray_circular_tests.ml  varray_incl.ml  varray_sig.ml  varray_spec.mli  varray_tests.ml
plugins/monolith/: ortac-monolith.opam
plugins/monolith/src/: dune
plugins/qcheck-stm/doc/: dune  example_limitations.mli  example_sut.mli  index.mld  sut_type_warning.mli
plugins/qcheck-stm/src/: config.ml  dune  ir_of_gospel.ml  ocaml_of_ir.ml  ocaml_of_ir.mli  ortac_qcheck_stm.ml  reserr.ml  reserr.mli  stm_of_ir.ml
plugins/qcheck-stm/test/: all_warnings_errors.expected  array_stm_tests.expected.ml  dune  expect_config.expected  expect_config.ml  expect_ir.expected  expect_ir.ml  expect_stm.ml  hashtbl.mli  hashtbl_errors.expected  hashtbl_stm_tests.expected.ml  lib.mli
plugins/wrapper/src/: dune
plugins/wrapper/test/suite/: dune  translation.ml
src/core/: ocaml_of_gospel.ml  warnings.ml
src/runtime/: ortac_runtime.ml  ortac_runtime_intf.ml
